# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  a.out  author  main.c  test
includes/: ft_printf.h
libft/: Makefile  ft_abs.c  ft_abs_double.c  ft_atoi.c  ft_atoi_base.c  ft_fibonacci.c  ft_isalnum.c  ft_isdigit.c  ft_itoa_base_big_h.c  ft_itoa_base_big_hh.c  ft_itoa_base_big_l.c  ft_itoa_base_small_h.c  ft_itoa_base_small_ll.c  ft_itoalen.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memdel.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_recursive_factorial.c  ft_recursive_power.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strchrn.c  ft_strclr.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strnequ.c  (+5 more)
libft/includes/: libft.h
libft/src/: ft_abs.c  ft_abs_double.c  ft_atoi.c  ft_atoi_base.c  ft_atoi_hex.c  ft_bzero.c  ft_catstr.c  ft_count_words.c  ft_diff_double.c  ft_dtoa.c  ft_fibonacci.c  ft_is_sort.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base_big.c  ft_itoa_base_big_h.c  ft_itoa_base_big_hh.c  ft_itoa_base_big_l.c  ft_itoa_base_big_ll.c  ft_itoa_base_small.c  ft_itoa_base_small_h.c  ft_itoa_base_small_hh.c  ft_itoa_base_small_l.c  ft_itoa_base_small_ll.c  ft_itoa_h.c  ft_itoa_hh.c  ft_itoa_l.c  ft_itoa_ll.c  ft_itoalen.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  (+61 more)
src/: all_flagsspec.c  buffer.c  buffer2.c  colors.c  double.c  free_dd.c  i_flags.c  i_flags1.c  i_flags2.c  l_ll_h_hh_for_i.c  l_ll_h_hh_for_o.c  l_ll_h_hh_for_u.c  l_ll_h_hh_for_x.c  long_double.c  main.c  make_ox_for_any.c  make_str_with_precision_for_any.c  none_infinity.c  o_flags.c  o_flags1.c  parsing_and_flags.c  pf_printf.c  preparce_for_flags.c  print_float.c  str_calc.c  str_calc_extra.c  u_flags.c  x_flags.c  x_flags1.c
