cmake_minimum_required(VERSION 3.13)
project(ft_printf)

set(CMAKE_C_STANDARD 99)

include_directories(includes)
include_directories(libft)

add_executable(ft_printf
		includes/ft_printf.h
		libft/ft_abs.c
		libft/ft_abs_double.c
		libft/ft_atoi.c
		libft/ft_atoi_base.c
		libft/ft_atoi_hex.c
		libft/ft_bzero.c
		libft/ft_catstr.c
		libft/ft_count_words.c
		libft/ft_diff_double.c
		libft/ft_dtoa.c
		libft/ft_fibonacci.c
		libft/ft_is_sort.c
		libft/ft_isalnum.c
		libft/ft_isalpha.c
		libft/ft_isascii.c
		libft/ft_isdigit.c
		libft/ft_isprint.c
		libft/ft_itoa.c
		libft/ft_itoa_base_big.c
		libft/ft_itoa_base_big_h.c
		libft/ft_itoa_base_big_hh.c
		libft/ft_itoa_base_big_l.c
		libft/ft_itoa_base_big_ll.c
		libft/ft_itoa_base_small.c
		libft/ft_itoa_base_small_h.c
		libft/ft_itoa_base_small_hh.c
		libft/ft_itoa_base_small_l.c
		libft/ft_itoa_base_small_ll.c
		libft/ft_itoa_h.c
		libft/ft_itoa_hh.c
		libft/ft_itoa_l.c
		libft/ft_itoa_ll.c
		libft/ft_itoalen.c
		libft/ft_lstadd.c
		libft/ft_lstdel.c
		libft/ft_lstdelone.c
		libft/ft_lstiter.c
		libft/ft_lstmap.c
		libft/ft_lstnew.c
		libft/ft_max.c
		libft/ft_memalloc.c
		libft/ft_memccpy.c
		libft/ft_memchr.c
		libft/ft_memcmp.c
		libft/ft_memcpy.c
		libft/ft_memdel.c
		libft/ft_memmove.c
		libft/ft_memset.c
		libft/ft_min.c
		libft/ft_power.c
		libft/ft_putchar.c
		libft/ft_putchar_fd.c
		libft/ft_putendl.c
		libft/ft_putendl_fd.c
		libft/ft_putnbr.c
		libft/ft_putnbr_fd.c
		libft/ft_putstr.c
		libft/ft_putstr_fd.c
		libft/ft_recursive_factorial.c
		libft/ft_recursive_power.c
		libft/ft_round_double.c
		libft/ft_sqrt.c
		libft/ft_sqrt_up.c
		libft/ft_strcat.c
		libft/ft_strchr.c
		libft/ft_strchrn.c
		libft/ft_strclr.c
		libft/ft_strcmp.c
		libft/ft_strcpy.c
		libft/ft_strcut.c
		libft/ft_strdel.c
		libft/ft_strdup.c
		libft/ft_strequ.c
		libft/ft_striter.c
		libft/ft_striteri.c
		libft/ft_strjoin.c
		libft/ft_strlcat.c
		libft/ft_strlen.c
		libft/ft_strmap.c
		libft/ft_strmapi.c
		libft/ft_strncat.c
		libft/ft_strncmp.c
		libft/ft_strncpy.c
		libft/ft_strnequ.c
		libft/ft_strnew.c
		libft/ft_strnstr.c
		libft/ft_strrchr.c
		libft/ft_strrejoin.c
		libft/ft_strrev.c
		libft/ft_strsplit.c
		libft/ft_strstr.c
		libft/ft_strsub.c
		libft/ft_strtrim.c
		libft/ft_tolower.c
		libft/ft_toupper.c
		libft/ft_utoa.c
		libft/ft_utoa_h.c
		libft/ft_utoa_hh.c
		libft/ft_utoa_l.c
		libft/ft_utoa_ll.c
		libft/get_next_line.c
		libft/libft.h
		src/all_flagsspec.c
		src/buffer.c
		src/buffer2.c
		src/double.c
		src/free_dd.c
		src/i_flags.c
		src/i_flags1.c
		src/i_flags2.c
		src/l_ll_h_hh_for_i.c
		src/l_ll_h_hh_for_o.c
		src/l_ll_h_hh_for_u.c
		src/l_ll_h_hh_for_x.c
		src/long_double.c
		src/main.c
		src/make_ox_for_any.c
		src/make_str_with_precision_for_any.c
		src/none_infinity.c
		src/o_flags.c
		src/o_flags1.c
		src/parsing_and_flags.c
		src/preparce_for_flags.c
		src/print_float.c
		src/str_calc.c
		src/str_calc_extra.c
		src/u_flags.c
		src/x_flags.c
		src/x_flags1.c)
