cmake_minimum_required(VERSION 3.13)
project(ft_printf C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(ft_printf
		includes/ft_printf.h
		libft/includes/libft.h
		libft/src/ft_abs.c
		libft/src/ft_abs_double.c
		libft/src/ft_atoi.c
		libft/src/ft_atoi_base.c
		libft/src/ft_atoi_hex.c
		libft/src/ft_bzero.c
		libft/src/ft_catstr.c
		libft/src/ft_count_words.c
		libft/src/ft_diff_double.c
		libft/src/ft_dtoa.c
		libft/src/ft_fibonacci.c
		libft/src/ft_is_sort.c
		libft/src/ft_isalnum.c
		libft/src/ft_isalpha.c
		libft/src/ft_isascii.c
		libft/src/ft_isdigit.c
		libft/src/ft_isprint.c
		libft/src/ft_itoa.c
		libft/src/ft_itoa_base_big.c
		libft/src/ft_itoa_base_big_h.c
		libft/src/ft_itoa_base_big_hh.c
		libft/src/ft_itoa_base_big_l.c
		libft/src/ft_itoa_base_big_ll.c
		libft/src/ft_itoa_base_small.c
		libft/src/ft_itoa_base_small_h.c
		libft/src/ft_itoa_base_small_hh.c
		libft/src/ft_itoa_base_small_l.c
		libft/src/ft_itoa_base_small_ll.c
		libft/src/ft_itoa_h.c
		libft/src/ft_itoa_hh.c
		libft/src/ft_itoa_l.c
		libft/src/ft_itoa_ll.c
		libft/src/ft_itoalen.c
		libft/src/ft_lstadd.c
		libft/src/ft_lstdel.c
		libft/src/ft_lstdelone.c
		libft/src/ft_lstiter.c
		libft/src/ft_lstmap.c
		libft/src/ft_lstnew.c
		libft/src/ft_max.c
		libft/src/ft_memalloc.c
		libft/src/ft_memccpy.c
		libft/src/ft_memchr.c
		libft/src/ft_memcmp.c
		libft/src/ft_memcpy.c
		libft/src/ft_memdel.c
		libft/src/ft_memmove.c
		libft/src/ft_memset.c
		libft/src/ft_min.c
		libft/src/ft_power.c
		libft/src/ft_putchar.c
		libft/src/ft_putchar_fd.c
		libft/src/ft_putendl.c
		libft/src/ft_putendl_fd.c
		libft/src/ft_putnbr.c
		libft/src/ft_putnbr_fd.c
		libft/src/ft_putstr.c
		libft/src/ft_putstr_fd.c
		libft/src/ft_recursive_factorial.c
		libft/src/ft_recursive_power.c
		libft/src/ft_round_double.c
		libft/src/ft_sqrt.c
		libft/src/ft_sqrt_up.c
		libft/src/ft_strcat.c
		libft/src/ft_strchr.c
		libft/src/ft_strchrn.c
		libft/src/ft_strclr.c
		libft/src/ft_strcmp.c
		libft/src/ft_strcpy.c
		libft/src/ft_strcut.c
		libft/src/ft_strdel.c
		libft/src/ft_strdup.c
		libft/src/ft_strequ.c
		libft/src/ft_striter.c
		libft/src/ft_striteri.c
		libft/src/ft_strjoin.c
		libft/src/ft_strlcat.c
		libft/src/ft_strlen.c
		libft/src/ft_strmap.c
		libft/src/ft_strmapi.c
		libft/src/ft_strncat.c
		libft/src/ft_strncmp.c
		libft/src/ft_strncpy.c
		libft/src/ft_strnequ.c
		libft/src/ft_strnew.c
		libft/src/ft_strnstr.c
		libft/src/ft_strrchr.c
		libft/src/ft_strrejoin.c
		libft/src/ft_strrev.c
		libft/src/ft_strsplit.c
		libft/src/ft_strstr.c
		libft/src/ft_strsub.c
		libft/src/ft_strtrim.c
		libft/src/ft_tolower.c
		libft/src/ft_toupper.c
		libft/src/ft_utoa.c
		libft/src/ft_utoa_h.c
		libft/src/ft_utoa_hh.c
		libft/src/ft_utoa_l.c
		libft/src/ft_utoa_ll.c
		libft/src/get_next_line.c
		src/all_flagsspec.c
		src/buffer.c
		src/buffer2.c
		src/double.c
		src/free_dd.c
		src/i_flags.c
		src/i_flags1.c
		src/i_flags2.c
		src/l_ll_h_hh_for_i.c
		src/l_ll_h_hh_for_o.c
		src/l_ll_h_hh_for_u.c
		src/l_ll_h_hh_for_x.c
		src/long_double.c
		src/make_ox_for_any.c
		src/make_str_with_precision_for_any.c
		src/none_infinity.c
		src/o_flags.c
		src/o_flags1.c
		src/parsing_and_flags.c
		src/pf_printf.c
		src/preparce_for_flags.c
		src/print_float.c
		src/str_calc.c
		src/str_calc_extra.c
		src/u_flags.c
		src/x_flags.c
		src/x_flags1.c main.c)
